# homeassistant-zowietek

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  hacs.json  pyproject.toml  requirements_test.txt
.claude/skills/: ha-zowietek-github.md  ha-zowietek-integration.md  ha-zowietek-research.md  ha-zowietek-tdd.md  ha-zowietek-typing.md
.claude/skills/ha-zowietek-bug-triage/: SKILL.md
.claude/skills/ha-zowietek-github/: SKILL.md
.claude/skills/ha-zowietek-integration/: SKILL.md
.claude/skills/ha-zowietek-issue-executor/: SKILL.md
.claude/skills/ha-zowietek-issue-selector/: SKILL.md
.claude/skills/ha-zowietek-live-testing/: SKILL.md
.claude/skills/ha-zowietek-research/: SKILL.md
.claude/skills/ha-zowietek-tdd/: SKILL.md
.claude/skills/ha-zowietek-typing/: SKILL.md
.claude/skills/ha-zowietek-video-encoder/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh  postStartCommand.sh
.github/: labels.yml
.github/ISSUE_TEMPLATE/: 1_bug_report.yml  2_feature_request.yml  3_connection_issue.yml  4_help_question.yml  5_compatibility_issue.yml  config.yml
.github/workflows/: hacs.yml  hassfest.yml  issue-triage.yml  labels.yml  pr-review.yml  release.yml  stale.yml  test.yml
config/: .gitkeep
custom_components/zowietek/: __init__.py  api.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  device_trigger.py  diagnostics.py  discovery.py  entity.py  exceptions.py  go2rtc_helper.py  manifest.json  media_player.py  models.py  number.py  select.py  sensor.py  services.py  services.yaml  strings.json  switch.py
custom_components/zowietek/translations/: en.json
docs/: ADVANCED.md  QUICK_START.md  api.md
tests/: __init__.py  conftest.py  test_api.py  test_api_streamplay.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_coordinator.py  test_device_trigger.py  test_diagnostics.py  test_discovery.py  test_entity.py  test_exceptions.py  test_go2rtc_helper.py  test_init.py  test_media_player.py  test_models.py  test_number.py  test_select.py  test_sensor.py  test_services.py  test_switch.py  test_translations.py
