[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "homeassistant-zowietek"
version = "0.1.0"
description = "Home Assistant integration for Zowietek video streaming devices (ZowieBox NDI Encoder/Decoder)"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.13"
authors = [
    {name = "Troy Kelly", email = "troy@troykelly.com"}
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
    "Topic :: Multimedia :: Video",
]

[project.urls]
Homepage = "https://github.com/troykelly/homeassistant-zowietek"
Repository = "https://github.com/troykelly/homeassistant-zowietek"
Issues = "https://github.com/troykelly/homeassistant-zowietek/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_cli = true
log_cli_level = "DEBUG"
# Exclude live tests by default (they require network and are run separately)
norecursedirs = ["tests/live"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_any_generics = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "homeassistant.*"
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "pytest_homeassistant_custom_component.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "voluptuous.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "aiohttp.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM103", # Return condition directly - reduces readability in some cases
]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.zowietek"]

[tool.coverage.run]
source = ["custom_components/zowietek"]
omit = [
    "tests/*",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
